--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_AI_OPENAI_API_KEY="<OPENAI_API_KEY>"
+      - SPRING_AI_OPENAI_API_KEY=${OPENAI_API_KEY}
     networks:
       - app-network
 
